# RuntimeCommand

./: .bashrc  .gitignore  .shrc  Dockerfile  README.md  TODO.md  bashrc.sh  build.sh  claude.sh  cline.sh  config.sh  cron_setup.sh  dependencies.json  entrypoint.sh  environment.sh  home_setup.sh  install.sh  kiro.sh  mise.sh  orders.txt  pkgsort.py  pyproject.toml  rc.sh  requirements.txt  setup.cfg  setup_jupyter.sh  shrc  shrc.sh  vimrc  wrapper.sh
ai_agents/: claude.sh  cline.sh  kiro.sh
ai_agents/claude/: settings.json
ai_agents/cline/: globalState-template.json  globalState.json
cline/: globalState.json
code_server/Machine/: settings-template.json
code_server/User/: settings.json
lifecycle/notebook-instance/: create.sh  start.sh
linux/: install.sh  remove.sh  wrapper.sh
linux/code_server/: coldstart.sh
macos/: install.sh  ssh_tunnel.sh  wrapper.sh
macos/code_server/: coldstart.sh
pyutils/: json_merge.py
requires-python/: dependencies.json  installation.txt  requirements.txt
sagemaker/: bashrc  bashrc.sh  init  init.sh  install.sh  profile.sh  register.sh  setup_jupyter.sh  wrapper.sh
sagemaker/code_server/: coldstart.sh
sagemaker/sagemaker_jproxy_launcher_ext/: package.json  pyproject.toml  setup.py
sagemaker_jproxy_launcher_ext/: setup.py  tsconfig.json
sagemaker_jproxy_launcher_ext/sagemaker_jproxy_launcher_ext/: _version.py
sagemaker_jproxy_launcher_ext/src/: custom.d.ts  index.ts
shutils/: Dockerfile  README.md  argparse.sh  build.sh  config.sh  home_setup.sh  log.sh  mise.sh  shell.sh
src-python/: pipord.py
test-python/: test_pipord.py  utils.py
tools-python/: pkgsort.py
unix/: coldstart.sh  mise.sh  rc.sh
(+46 files in other folders)
